@@ -1,3 +1,8 @@
+2009-05-19  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* nad/testvarious,nad/testdatumfile: split datum file specific
+	stuff into testdatumfile, and add kav5 test in testvarious (#40).
+
 2009-05-18  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* src/PJ_sts.c: Remove duplicate division o lp.phi by P->C_p (#40).
